k8s/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: vote.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-app
                port:
                  number: 80
    - host: vote.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-app
                port:
                  number: 80
